--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts/main.js"></script>
-    <title>declaritive.io | home</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Inter:regular,bold,500,900">
+    <title>declarified.io | home</title>
 </head>
 <body>
-    <h1>welcome to declaritive.io</h1>
-    <h2>bringing the "fun" back to functional programming</h2>
+    <h1><span style="font-weight: 500">welcome to </span><span style="font-weight: 900">declarified.io</span></h1>
+    <h2 style="font-weight: 300">Bringing the <span style="font-weight: 500">"fun"</span> back to <span style="font-weight: 500">functional programming.</span></h2>
     <a href="contents.html">
         <button>get started</button>
     </a>
