--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts/main.js"></script>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Inter:regular,bold,500,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:regular,bold,500,900">
+
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <title>declarified.io | home</title>
 </head>
+
 <body>
     <h1><span style="font-weight: 500">welcome to </span><span style="font-weight: 900">declarified.io</span></h1>
-    <h2 style="font-weight: 300">Bringing the <span style="font-weight: 500">"fun"</span> back to <span style="font-weight: 500">functional programming.</span></h2>
+    <h2 style="font-weight: 300">Bringing the <span style="font-weight: 500">"fun"</span> back to <span
+            style="font-weight: 500">functional programming.</span></h2>
     <a href="contents.html">
         <button>get started</button>
     </a>
 </body>
-</html>
