Changed search script to defer to reduce load time

--- a/search.html
+++ b/search.html
@@ -157,7 +157,7 @@
         2022. declarified.io
     </footer>
 
-    <script src="../scripts/search.js" type="module"></script>
+    <script defer src="../scripts/search.js" type="module"></script>
     <script src="../scripts/flexsearch.bundle.js"></script>
     <script src="../scripts/highlight/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
