--- a/index.html
+++ b/index.html
@@ -5,20 +5,232 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="scripts/main.js"></script>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:regular,bold,500,900">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:regular,bold,black,medium">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/base16/solarized-light.min.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-
-    <title>declarified.io | home</title>
+    <title>declarified.io | Home</title>
 </head>
 
 <body>
-    <h1><span style="font-weight: 500">welcome to </span><span style="font-weight: 900">declarified.io</span></h1>
-    <h2 style="font-weight: 300">Bringing the <span style="font-weight: 500">"fun"</span> back to <span
-            style="font-weight: 500">functional programming.</span></h2>
-    <a href="contents.html">
-        <button>get started</button>
-    </a>
+    <header>
+        <div class="header-items">
+            <div class="hamburger-menu-icon-wrapper" id="hamburger-menu-button">
+                <div class="hamburger-menu-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                        class="bi bi-list" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                    </svg>
+                </div>
+            </div>
+
+            <div class="close-hamburger-menu-icon-wrapper" id="close-hamburger-menu-button">
+                <div class="close-hamburger-menu-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-x"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                </div>
+            </div>
+
+
+            <div id='logo'>
+                <a href="../index.html">declarified.io</a>
+            </div>
+            <div id='icon-logo'>
+                <a href="../index.html"><img class="icon" src="./images/Icon.png"></a>
+            </div>
+
+            <div class="header-links">
+                <a class="header-link-current" href="introduction.html">Guide</a>
+                <a class="header-link" href="../Video.html">Video</a>
+                <a class="header-link" href="../Resources.html">Resources</a>
+            </div>
+
+            <form class="search-bar main-search-bar">
+                <input class="search-term" type="search" placeholder="Search...">
+                <button type="submit">Search</button>
+            </form>
+
+            <div class="more-options-icon-wrapper" id="more-options-button">
+                <div class="more-options-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                        class="bi bi-three-dots" viewBox="0 0 16 16">
+                        <path
+                            d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z" />
+                    </svg>
+                </div>
+            </div>
+
+            <div class="close-options-icon-wrapper" id="close-options-button">
+                <div class="close-options-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-x"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- menus -->
+
+    <div class="more-options-menu" id="options-menu">
+        <form class="search-bar menu-search-bar">
+            <input class="menu-search-term" type="search" placeholder="Search...">
+            <button type="submit">Search</button>
+        </form>
+        <a class="header-link-current" href="introduction.html">Guide</a><br>
+        <a class="header-link" href="../Video.html">Video</a><br>
+        <a class="header-link" href="../Resources.html">Resources</a>
+    </div>
+
+    <div class="hamburger-menu" id="hamburger-menu">
+        <div class="hamburger-menu-content">
+            <div class="side-column-labels">Sections:</div>
+            <span class="sections-labels">
+                <p class="side-column-text"><a href="chapters/Introduction.html">Introduction</a></p>
+                <p class="side-column-text"><a href="chapters/Prerequisites.html">Prerequisites</a></p>
+                <p class="side-column-text"><a href="chapters/First-class Functions.html">First-class Functions</a></p>
+                <p class="side-column-text"><a href="chapters/pluralize.html">pluralize</a></p>
+                <p class="side-column-text"><a href="chapters/map.html">map</a></p>
+                <p class="side-column-text"><a href="chapters/forEach.html">forEach</a></p>
+                <p class="side-column-text"><a href="chapters/filterArray.html">filterArray</a></p>
+                <p class="side-column-text"><a href="chapters/eitherFilter.html">eitherFilter</a></p>
+                <p class="side-column-text"><a href="chapters/eitherCallback.html">eitherCallback</a></p>
+                <p class="side-column-text"><a href="chapters/reduce.html">reduce</a></p>
+                <p class="side-column-text"><a href="chapters/intersection.html">intersection</a></p>
+                <p class="side-column-text"><a href="chapters/union.html">union</a></p>
+                <p class="side-column-text"><a href="chapters/objOfMatches.html">objOfMatches</a></p>
+                <p class="side-column-text"><a href="chapters/arrToObj.html">arrToObj</a></p>
+                <p class="side-column-text"><a href="chapters/multiMap.html">multiMap</a></p>
+                <p class="side-column-text"><a href="chapters/majority.html">majority</a></p>
+                <p class="side-column-text"><a href="chapters/prioritize.html">prioritize</a></p>
+                <p class="side-column-text"><a href="chapters/countBy.html">countBy</a></p>
+                <p class="side-column-text"><a href="chapters/groupBy.html">groupBy</a></p>
+                <p class="side-column-text"><a href="chapters/goodKeys.html">goodKeys</a></p>
+                <p class="side-column-text"><a href="chapters/Conclusion.html">Conclusion</a></p>
+            </span>
+        </div>
+    </div>
+
+    <!-- page body -->
+
+    <div class="home-page-body">
+
+        <!-- hero banner -->
+
+        <div class="hero-banner">
+            <div class="hero-banner-items">
+                <div class="banner-text">
+                    <div class="gradient-logo">
+                        declarified.io
+                    </div>
+                    <div class="subtitle">
+                        A guide to callbacks and higher-order functions in JavaScript
+                    </div>
+                    <a href="chapters/Introduction.html">
+                        <button class="start-button">Get Started</button>
+                    </a>
+                </div>
+                <div class="hero-image-wrapper">
+                    <img class="hero-image" src="images/landing page art.svg">
+                </div>
+            </div>
+        </div>
+
+        <!-- main content -->
+
+        <div class="page-content-wrapper">
+            <div class="tagline">
+                Put the <strong>fun</strong> back in <strong>functional programming</strong>.
+            </div>
+            <br>
+            <div class="tagline-sub">
+                Crush the concepts. Cut the confusion. Writing declarative code has never been easier.
+            </div>
+
+            <div class="feature feature-1">
+                <div class="feature-text-image-wrapper">
+                    <div class="feature-text-wrapper">
+                        <div class="feature-title">
+                            Seeing is Believing
+                        </div>
+                        <div class="feature-text">Looking for more than just a working solution? Every challenge on
+                            declarified.io has a <strong>step-by-step visual walkthrough</strong> of the algorithm
+                            behind it. You won't just learn which solutions work, you'll <strong>learn why they
+                                work</strong> by seeing them in action.</div>
+                    </div>
+                    <div class="feature-image-wrapper">
+                        <div class="inner-gradient"></div>
+                        <img class="feature-image" src="./images/landing-page-images/step by step.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="feature feature-2">
+                <div class="feature-text-image-wrapper">
+                    <div class="feature-text-wrapper">
+                        <div class="feature-title">
+                            Designed for CSX
+                        </div>
+                        <div class="feature-text">This guide isn't affiliated with CSX, but it was built by people who
+                            have previously completed it. If we can do it, <strong>you can do it</strong>. This guide
+                            has information for every challenge in the <strong>entire CSX Callbacks and Higher Order
+                                Functions module</strong>.</div>
+                    </div>
+                    <div class="feature-image-wrapper feature-image-wrapper-2">
+                        <div class="inner-gradient-right"></div>
+                        <img class="feature-image feature-image-2"
+                            src="./images/landing-page-images/designed for csx.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="feature feature-3">
+                <div class="feature-text-image-wrapper">
+                    <div class="feature-text-wrapper">
+                        <div class="feature-title">
+                            Crack the Code
+                        </div>
+                        <div class="feature-text">Each walkthrough on this site is followed by a video of a
+                            <strong>real-time coding demonstration</strong>, showing a possible implementation of the
+                            solution. With the entire declarified.io guide available for <strong>free in both video and
+                                text format</strong>, it's time to learn things your way.</div>
+                    </div>
+                    <div class="feature-image-wrapper">
+                        <div class="inner-gradient"></div>
+                        <img class="feature-image" src="./images/landing-page-images/crack the code.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="tagline">
+                Find the <strong>clarity</strong> in <strong>declarative code</strong>.
+            </div>
+            <br>
+            <div class="tagline-sub">
+                It's time to break through your blocks. Your higher-order function journey begins today!
+            </div>
+
+        </div>
+    </div>
+
+    <!-- footer -->
+
+    <footer>
+        <div class="footer-content-wrapper">
+            <div class="footer-button">
+                <a href="chapters/Introduction.html">
+                    <button class="start-button start-button-2">Get Started</button>
+                </a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="scripts/home.js"></script>
 </body>
