--- a/index.html
+++ b/index.html
@@ -16,26 +16,7 @@
 <body>
     <header>
         <div class="header-items">
-            <div class="hamburger-menu-icon-wrapper" id="hamburger-menu-button">
-                <div class="hamburger-menu-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                        class="bi bi-list" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-                    </svg>
-                </div>
-            </div>
-
-            <div class="close-hamburger-menu-icon-wrapper" id="close-hamburger-menu-button">
-                <div class="close-hamburger-menu-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-x"
-                        viewBox="0 0 16 16">
-                        <path
-                            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
-                    </svg>
-                </div>
-            </div>
-
+            
 
             <div id='logo'>
                 <a href="../index.html">declarified.io</a>
@@ -77,7 +58,7 @@
         </div>
     </header>
 
-    <!-- menus -->
+    <!-- menu -->
 
     <div class="more-options-menu" id="options-menu">
         <form class="search-bar menu-search-bar">
@@ -87,35 +68,6 @@
         <a class="header-link-current" href="introduction.html">Guide</a><br>
         <a class="header-link" href="../Video.html">Video</a><br>
         <a class="header-link" href="../Resources.html">Resources</a>
-    </div>
-
-    <div class="hamburger-menu" id="hamburger-menu">
-        <div class="hamburger-menu-content">
-            <div class="side-column-labels">Sections:</div>
-            <span class="sections-labels">
-                <p class="side-column-text"><a href="chapters/Introduction.html">Introduction</a></p>
-                <p class="side-column-text"><a href="chapters/Prerequisites.html">Prerequisites</a></p>
-                <p class="side-column-text"><a href="chapters/First-class Functions.html">First-class Functions</a></p>
-                <p class="side-column-text"><a href="chapters/pluralize.html">pluralize</a></p>
-                <p class="side-column-text"><a href="chapters/map.html">map</a></p>
-                <p class="side-column-text"><a href="chapters/forEach.html">forEach</a></p>
-                <p class="side-column-text"><a href="chapters/filterArray.html">filterArray</a></p>
-                <p class="side-column-text"><a href="chapters/eitherFilter.html">eitherFilter</a></p>
-                <p class="side-column-text"><a href="chapters/eitherCallback.html">eitherCallback</a></p>
-                <p class="side-column-text"><a href="chapters/reduce.html">reduce</a></p>
-                <p class="side-column-text"><a href="chapters/intersection.html">intersection</a></p>
-                <p class="side-column-text"><a href="chapters/union.html">union</a></p>
-                <p class="side-column-text"><a href="chapters/objOfMatches.html">objOfMatches</a></p>
-                <p class="side-column-text"><a href="chapters/arrToObj.html">arrToObj</a></p>
-                <p class="side-column-text"><a href="chapters/multiMap.html">multiMap</a></p>
-                <p class="side-column-text"><a href="chapters/majority.html">majority</a></p>
-                <p class="side-column-text"><a href="chapters/prioritize.html">prioritize</a></p>
-                <p class="side-column-text"><a href="chapters/countBy.html">countBy</a></p>
-                <p class="side-column-text"><a href="chapters/groupBy.html">groupBy</a></p>
-                <p class="side-column-text"><a href="chapters/goodKeys.html">goodKeys</a></p>
-                <p class="side-column-text"><a href="chapters/Conclusion.html">Conclusion</a></p>
-            </span>
-        </div>
     </div>
 
     <!-- page body -->
@@ -153,6 +105,23 @@
             <div class="tagline-sub">
                 Crush the concepts. Cut the confusion. Writing declarative code has never been easier.
             </div>
+            <div class="feature feature-2">
+                <div class="feature-text-image-wrapper">
+                    <div class="feature-text-wrapper">
+                        <div class="feature-title">
+                            Designed for CSX
+                        </div>
+                        <div class="feature-text">This guide
+                            has information for every challenge in the <strong>entire CSX Callbacks and Higher Order Functions module</strong>. declarified.io isn't affiliated with CSX, but it was built by people who
+                            have previously completed it. If we can do it, <strong>you can do it</strong>. </div>
+                    </div>
+                    <div class="feature-image-wrapper feature-image-wrapper-2">
+                        <div class="inner-gradient-right"></div>
+                        <img class="feature-image"
+                            src="./images/landing-page-images/designed for csx.svg">
+                    </div>
+                </div>
+            </div>
 
             <div class="feature feature-1">
                 <div class="feature-text-image-wrapper">
@@ -167,32 +136,15 @@
                     </div>
                     <div class="feature-image-wrapper">
                         <div class="inner-gradient"></div>
-                        <img class="feature-image" src="./images/landing-page-images/step by step.png">
+                        <img class="feature-image" src="./images/landing-page-images/step by step.svg">
                     </div>
                 </div>
             </div>
+
+            
 
             <div class="feature feature-2">
-                <div class="feature-text-image-wrapper">
-                    <div class="feature-text-wrapper">
-                        <div class="feature-title">
-                            Designed for CSX
-                        </div>
-                        <div class="feature-text">This guide isn't affiliated with CSX, but it was built by people who
-                            have previously completed it. If we can do it, <strong>you can do it</strong>. This guide
-                            has information for every challenge in the <strong>entire CSX Callbacks and Higher Order
-                                Functions module</strong>.</div>
-                    </div>
-                    <div class="feature-image-wrapper feature-image-wrapper-2">
-                        <div class="inner-gradient-right"></div>
-                        <img class="feature-image feature-image-2"
-                            src="./images/landing-page-images/designed for csx.png">
-                    </div>
-                </div>
-            </div>
-
-            <div class="feature feature-3">
-                <div class="feature-text-image-wrapper">
+                <div class="feature-text-image-wrapper  closing-feature">
                     <div class="feature-text-wrapper">
                         <div class="feature-title">
                             Crack the Code
@@ -202,9 +154,9 @@
                             solution. With the entire declarified.io guide available for <strong>free in both video and
                                 text format</strong>, it's time to learn things your way.</div>
                     </div>
-                    <div class="feature-image-wrapper">
-                        <div class="inner-gradient"></div>
-                        <img class="feature-image" src="./images/landing-page-images/crack the code.png">
+                    <div class="feature-image-wrapper feature-image-wrapper-2">
+                        <div class="inner-gradient-right"></div>
+                        <img class="feature-image" src="./images/landing-page-images/crack the code.svg">
                     </div>
                 </div>
             </div>
