Updated landing page copy

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         <div class="feature-title">
                             Designed for CSX
                         </div>
-                        <div class="feature-text">This guide
-                            has information for every challenge in the <strong>entire CSX Callbacks and Higher Order Functions module</strong>. declarified.io isn't affiliated with CSX, but it was built by people who
+                        <div class="feature-text">declarified.io
+                            has information for every challenge in the <strong>entire CSX Callbacks and Higher Order Functions module</strong>. This guide isn't affiliated with CSX, but it was built by people who
                             have previously completed it. If we can do it, <strong>you can do it</strong>. </div>
                     </div>
                     <div class="feature-image-wrapper feature-image-wrapper-2">
