Fixed case issue, restoring broken link

--- a/contents.html
+++ b/contents.html
@@ -10,7 +10,7 @@
     <div id="header">
         <a href="./index.html">declarified.io</a>
     </div>
-    <a href="chapters/introduction.html">Introduction</a><br>
+    <a href="chapters/Introduction.html">Introduction</a><br>
     <a href="chapters/Prerequisites.html">Prerequisites</a><br>
     <a href="chapters/First-class Functions.html">First-class Functions</a><br>
     <a href="chapters/pluralize.html">pluralize</a><br>
