--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="header-links">
-                <a class="header-link-current" href="introduction.html">Guide</a>
+                <a class="header-link" href="Introduction.html">Guide</a>
                 <a class="header-link" href="../Video.html">Video</a>
                 <a class="header-link" href="../Resources.html">Resources</a>
             </div>
@@ -65,7 +65,7 @@
             <input class="menu-search-term" type="search" placeholder="Search...">
             <button type="submit">Search</button>
         </form>
-        <a class="header-link-current" href="introduction.html">Guide</a><br>
+        <a class="header-link" href="Introduction.html">Guide</a><br>
         <a class="header-link" href="../Video.html">Video</a><br>
         <a class="header-link" href="../Resources.html">Resources</a>
     </div>
