Fixed footer and hero banner on mobile

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 Put the <strong>fun</strong> back in <strong>functional programming</strong>.
             </div>
             <br>
-            <div class="tagline-sub">
+            <div class="tagline-sub tagline-sub-1">
                 Crush the concepts. Cut the confusion. Writing declarative code has never been easier.
             </div>
             <div class="feature feature-2">
