--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/base16/solarized-light.min.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <title>declarified.io | pluralize</title>
+    <title>declarified.io | Search Results</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
                 <a href="../index.html">declarified.io</a>
             </div>
             <div class="header-links">
-                <a class="header-link-current" href="chapters/Introduction.html">Guide</a>
+                <a class="header-link" href="chapters/Introduction.html">Guide</a>
                 <a class="header-link" href="../Video.html">Video</a>
                 <a class="header-link" href="../Resources.html">Resources</a>
             </div>
@@ -77,7 +77,7 @@
             <input class="menu-search-term" type="search" placeholder="Search...">
             <button type="submit">Search</button>
         </form>
-        <a class="header-link-current" href="Introduction.html">Guide</a><br>
+        <a class="header-link" href="chapters/Introduction.html">Guide</a><br>
         <a class="header-link" href="../Video.html">Video</a><br>
         <a class="header-link" href="../Resources.html">Resources</a>
     </div>
