Fixed bolded header link

--- a/Video.html
+++ b/Video.html
@@ -41,8 +41,8 @@
             </div>
             <div class="header-links">
                 <a class="header-link" href="chapters/Introduction.html">Guide</a>
-                <a class="header-link" href="../Video.html">Video</a>
-                <a class="header-link-current" href="../Resources.html">Resources</a>
+                <a class="header-link-current" href="../Video.html">Video</a>
+                <a class="header-link" href="../Resources.html">Resources</a>
             </div>
             <form class="search-bar main-search-bar">
                 <input class="search-term" type="search" placeholder="Search...">
@@ -78,8 +78,8 @@
             <button type="submit">Search</button>
         </form>
         <a class="header-link" href="chapters/Introduction.html">Guide</a><br>
-        <a class="header-link" href="../Video.html">Video</a><br>
-        <a class="header-link-current" href="../Resources.html">Resources</a>
+        <a class="header-link-current" href="../Video.html">Video</a><br>
+        <a class="header-link" href="../Resources.html">Resources</a>
     </div>
 
     <div class="hamburger-menu" id="hamburger-menu">
