--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
                 <a href="../index.html">declarified.io</a>
             </div>
             <div class="header-links">
-                <a class="header-link-current" href="chapters/Introduction.html">Guide</a>
+                <a class="header-link" href="chapters/Introduction.html">Guide</a>
                 <a class="header-link" href="../Video.html">Video</a>
                 <a class="header-link" href="../Resources.html">Resources</a>
             </div>
@@ -77,7 +77,7 @@
             <input class="menu-search-term" type="search" placeholder="Search...">
             <button type="submit">Search</button>
         </form>
-        <a class="header-link-current" href="Introduction.html">Guide</a><br>
+        <a class="header-link" href="Introduction.html">Guide</a><br>
         <a class="header-link" href="../Video.html">Video</a><br>
         <a class="header-link" href="../Resources.html">Resources</a>
     </div>
