Fixed broken "Guide" link on header

--- a/404.html
+++ b/404.html
@@ -77,7 +77,7 @@
             <input class="menu-search-term" type="search" placeholder="Search...">
             <button type="submit">Search</button>
         </form>
-        <a class="header-link" href="Introduction.html">Guide</a><br>
+        <a class="header-link" href="chapters/Introduction.html">Guide</a><br>
         <a class="header-link" href="../Video.html">Video</a><br>
         <a class="header-link" href="../Resources.html">Resources</a>
     </div>
